@@ -1,3 +1,10 @@
+2005-11-16  Vincent Noel  <vincent.noel@gmail.com>	    
+
+	* log_repaint.c: (selection_changed_cb),
+	(logview_scroll_and_focus_path), (logview_repaint): Fix a crash
+	that could be triggered by switching logs and selecting lines like
+	crazy.
+
 2005-11-16  Vincent Noel  <vincent.noel@gmail.com>
 
 	* log_repaint.c: (selection_changed_cb), (logview_unbold_rows),
